[tool.poetry]
name = "aoc-py"
version = "0.1.0"
description = ""
authors = ["Volodymyr Anokhin <vlnn-github@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.6.12"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
